# bootloader

./: .gitmodules  README.md  bochsrc.txt  compile_commands.json  config.h.in  gen_binary.sh  meson.build
bios/boot/: boot.S  boot.lds
bios/fonts/: linux_8x8.h
bios/stage2/: config.h.in  fontcfg.h  link.lds  main.cpp  utils.cpp  utils.h
bios/stage2/driver/disk/: disk.cpp  disk.h
bios/stage2/driver/fs/: detectfs.h  fat.h
bios/stage2/realmode/: e820.cpp  e820.h  realmode.cpp  realmode.h  realmode_interrupt.cpp  video.cpp  video.h
boot/: boot.S
lib/: debug.cpp  debug.h  diskapi.h  fat.cpp  fat.h  font.cpp  libc.cpp  libc.h  malloc.h  memory.h  term.cpp  term.h  term_formatting.h
lib/fs/: fat.cpp  fat.h
stage2/: link.lds  main.cpp  utils.cpp  utils.h  video.cpp
stage2/driver/disk/: disk.cpp  disk.h
stage2/driver/fs/: fat.cpp  fat.h
stage2/legacy/: a20.S  a20_test.S  e820.cpp  fetch_far.S  realmode.cpp  realmode.h
stage2/realmode/: a20.S  e820.cpp  realmode.h  realmode_interrupt.cpp  video.cpp  video.h
